--- a/indenx.html
+++ b/indenx.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Slider</title>
-    <link rel="stylesheet" href="./css/style.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -16,11 +18,7 @@
 
                 <div id="app">
 
-                    <div>
-                        {{marti}}
-                    </div>
-
-                    <div class="item" v-for="element in slides">
+                    <div class="item" v-for="(element, index) in slides" :class="{visible: current!=index}">
                         <img :src="element.image" alt="" />
                         <div class="text">
                             <h3>
@@ -33,12 +31,16 @@
                     </div>
     
                     <div class="thumbs">
-                        <div class="prev"></div>
-                        <div class="next"></div>
-                        <div class="thumb active">
-                            <img src="img/01.webp" alt="Svezia" />
+                        <div class="prev" @click.prevent="prevSlide">
+                            <i class="fa-solid fa-arrow-up"></i>
                         </div>
-                        <div class="thumb">
+                        <div class="next" @click.prevent="nextSlide">
+                            <i class="fa-solid fa-arrow-down"></i>
+                        </div>
+                        <div class="thumb active" v-for="element in slides">
+                            <img :src="element.image" alt="" />
+                        </div>
+                        <!-- <div class="thumb">
                             <img src="img/02.webp" alt="Ratchet & Clank" />
                         </div>
                         <div class="thumb">
@@ -49,7 +51,7 @@
                         </div>
                         <div class="thumb">
                             <img src="img/05.webp" alt="Avengers" />
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
